# saas

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  saas.code-workspace
src/: Makefile  manage.py
src/home/: asgi.py  home.html  settings.py  urls.py  views.py  wsgi.py
src/templates/: base.html  home.html
