[project]
name = "saas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
target-version = ["py313"]

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]
