[project]
name = "saas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<5.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.3.0",
]

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]

[tool.djlint]
ignore = "H001,H017,T001,H031,H030"
profile = "django"
